# fastapi_project2

./: README.md  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_09_19_2346-07717c5cb109_create_products_table.py  2023_09_19_2359-f0a17e3eb903_create_users_table.py  2023_09_20_0313-aa68f8835632_create_posts_table.py  2023_09_20_1525-91b53de9a406_create_profiles_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  post.py  profile.py  user.py
users/: crud.py  views.py
