[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["borzxo <albert_elimh@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.0.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
aiosqlite = "^0.19.0"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
